--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,11 @@
 SECRET_KEY=your-secret-key-here
 DEBUG=
 ALLOWED_HOSTS=
-CORS_ALLOWED_ORIGINS = 
+CORS_ALLOWED_ORIGINS=
+CSRF_TRUSTED_ORIGINS=
+
+DB_NAME=coderr
+DB_USER=coderr
+DB_PASSWORD=coderr
+DB_HOST=db
+DB_PORT=5432
