--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,10 @@
-SECRET_KEY=your-secret-key-here
-DEBUG=
-ALLOWED_HOSTS=
-CORS_ALLOWED_ORIGINS=
-CSRF_TRUSTED_ORIGINS=
+DJANGO_SETTINGS_MODULE=core.settings.prod
+DEBUG=False
+
+SECRET_KEY=supergeheim
+
+ALLOWED_HOSTS=api.deinedomain.de
+CORS_ALLOWED_ORIGINS=https://dein-frontend.de
 
 DB_NAME=coderr
 DB_USER=coderr
