--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - ./media:/app/media
     depends_on:
       - db
+    restart: unless-stopped
 
   db:
     image: postgres:16
@@ -26,6 +27,7 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+    restart: unless-stopped
 
 volumes:
   postgres_data:
