--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,31 @@
 services:
-  web:
+  coderr_web:
     build: .
-    container_name: coderr_backend
+    container_name: coderr_web
     command: gunicorn core.wsgi:application --bind 0.0.0.0:8000
     env_file:
       - .env
-    ports:
-      - "8002:8000"
     volumes:
       - ./media:/app/media
       - ./staticfiles:/app/staticfiles
     depends_on:
-      - db
+      - coderr_db
     restart: unless-stopped
 
-  db:
+  coderr_nginx:
+    image: nginx:alpine
+    container_name: coderr_nginx
+    ports:
+      - "8002:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./media:/app/media
+      - ./staticfiles:/app/staticfiles
+    depends_on:
+      - coderr_web
+    restart: unless-stopped
+
+  coderr_db:
     image: postgres:16
     container_name: coderr_db
     environment:
@@ -22,7 +33,7 @@ services:
       POSTGRES_USER: coderr
       POSTGRES_PASSWORD: coderr
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - coderr_postgres_data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U coderr"]
       interval: 5s
@@ -31,4 +42,4 @@ services:
     restart: unless-stopped
 
 volumes:
-  postgres_data:
+  coderr_postgres_data:
