fix: load images

--- a/.env.template
+++ b/.env.template
@@ -6,7 +6,7 @@ SECRET_KEY=supergeheim
 ALLOWED_HOSTS=api.deinedomain.de
 CORS_ALLOWED_ORIGINS=https://dein-frontend.de
 
-DB_NAME=coderr
+DB_HOST=coderr_db
 DB_USER=coderr
 DB_PASSWORD=coderr
 DB_HOST=db
