--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,14 @@ services:
   coderr_web:
     build: .
     container_name: coderr_web
-    command: gunicorn core.wsgi:application --bind 0.0.0.0:8000
     env_file:
       - .env
     volumes:
       - ./media:/app/media
       - ./staticfiles:/app/staticfiles
     depends_on:
-      - coderr_db
+      coderr_db:
+        condition: service_healthy
     restart: unless-stopped
 
   coderr_nginx:
@@ -18,7 +18,7 @@ services:
     ports:
       - "8002:80"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./media:/app/media
       - ./staticfiles:/app/staticfiles
     depends_on:
