--- a/.env.template
+++ b/.env.template
@@ -7,7 +7,7 @@ ALLOWED_HOSTS=api.deinedomain.de
 CORS_ALLOWED_ORIGINS=https://dein-frontend.de
 
 DB_HOST=coderr_db
+DB_PORT=5432
+DB_NAME=coderr
 DB_USER=coderr
 DB_PASSWORD=coderr
-DB_HOST=db
-DB_PORT=5432
